--- a/app/views/layouts/react_page.haml
+++ b/app/views/layouts/react_page.haml
@@ -11,16 +11,16 @@
       - react_component_cache(name: "onboarding_topbar", props: props) do
         = react_component("OnboardingTopBar", props: props, prerender: true)
 
-  - if FeatureFlagHelper.feature_enabled?(:topbar_v1)
-    - if(search_mode != :keyword )
-      - maps_key = MarketplaceHelper.google_maps_key(@current_community.id)
-      - key_param = maps_key ? "&key=#{maps_key}" : ""
-      = javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places#{key_param}"
-    - props = topbar_props
-    - cache props do
-      = react_component("TopbarApp", props: props, prerender: true, id: 'topbar-container')
-  - else
-    = render partial: 'layouts/global_header', locals: header_props()
+  / - if FeatureFlagHelper.feature_enabled?(:topbar_v1)
+  /   - if(search_mode != :keyword )
+  /     - maps_key = MarketplaceHelper.google_maps_key(@current_community.id)
+  /     - key_param = maps_key ? "&key=#{maps_key}" : ""
+  /     = javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places#{key_param}"
+  /   - props = topbar_props
+  /   - cache props do
+  /     = react_component("TopbarApp", props: props, prerender: true, id: 'topbar-container')
+  / - else
+  /   = render partial: 'layouts/global_header', locals: header_props()
 
   - if display_expiration_notice?
     = render partial: "layouts/expiration_notice",
